--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,23 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".base.App"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+      <activity
+          android:name=".main.SecondActivity"
+          android:label="@string/app_name" >
+        <intent-filter>
+          <action android:name="android.intent.action.MAIN" />
+
+          <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+      </activity>
     </application>
 
 </manifest>
